2009-11-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12712: Add Hook renderElement_postProcessDataValues (Thanks to Jeff Segars)

2009-11-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #12589: recordlist localization doesn't return to pagemodule

2009-11-14  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #10752: Cryptic text in the mapping interface ("Custom TCE") 
	* Fixed bug: #12488: Selection of Template Object in new FCE

2009-11-02  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug: #10983: Unserializing problems because of UTF-8
	* Fixed issue: #12266:  mod1 shows size of localprocessing two times

2009-10-19  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue #6869: $realDelete for templavoila
	* Fixed bug #10756: Bad text ("TCE-Form") 

2009-10-18  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug #10754: Wrong spelling of TypoScript within labels

2009-10-11  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug #10751: Abbreviations are not allowed ("only TS")
	* Fixed bug #10775: Wrong spelling ("Data-Processing")
	* Fixed bug #11997: modifications due to deprecated funcitons in PHP 5.3
	* Fixed bug #7212: versioning-tab doesn't show up when logged in as non-admin

2009-10-01  Dmitry Dulepov <dmitry.dulepov@gmail.com>

	* Fixed bug #11676: With PHP 5.3 clickmenu item "TemplaVoila" in File > List module isn't displayed

2009-08-09  Steffen Kamper  <info@sk-typo3.de>

	* Added feature #9465: Disable languages for translation with mod.SHARED.disableLanguages

2009-08-15  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed issue #11520: DS Tag for Hiding Field Preview Data, updated documentation
	* Fixed bug #11173: Unit tests utilize the Live-Database

2009-08-09  Tolleiv Nietsch <nietsch@aoemedia.de>

	* Fixed bug #11532: TV use makeInstanceClassName and fill the deprecation log

2009-08-05  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #11653: mergeFormDataIntoTemplateStructure incorrectly determines sections
