@@ -1,3 +1,7 @@
+2009-11-24  Tolleiv Nietsch <nietsch@aoemedia.de>
+
+	* Fixed bug: #12721: Cannot get TO with rendertype=print when using DBAL
+
 2009-11-23  Steffen Kamper  <info@sk-typo3.de>
 
 	* Fixed bug: #12712: Add Hook renderElement_postProcessDataValues (Thanks to Jeff Segars)
